# api-rocket

./: Cargo.toml  README.md  Rocket.toml
src/: main.rs
src/definitions/: mod.rs
src/routes/: classrooms.rs  mod.rs
src/routes/classrooms/: definitions.rs
